[博客]：去掉关于我链接

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -201,7 +201,7 @@ a.grey-link, a.grey-link:hover, a.grey-link:visited {
 					<span class="label">
 	          作者
 	      	</span>
-	      	<a class="author-name blue-link" href="{{ site.base }}/aboutme">
+	      	<a class="author-name blue-link" href="">
 	        	<span>{{ site.author }}</span>
 					</a>
 					<span style="margin-left: 10px;">{{ page.date | date:"%Y-%m-%d %H:%M:%S" }}</span>
